# oselmk-python

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
examples/: run_batch_only.py  run_decremental.py  run_sequential.py
src/oselmk/: __init__.py  kernels.py  model.py
src/oselmk/utils/: __init__.py  kernels.py  metrics.py  normalization.py  results.py  windowing.py
tests/: test_kernels.py  test_metrics.py  test_model.py  test_normalization.py  test_results.py  test_windowing.py
